@@ -1,1 +1,1 @@
-	.section	.gcc_except_table,"a",@progbits
+	.section	.gcc_except_table,"a",%progbits
